# llamaindex-data-driven-apps

./: .gitignore  README.md  pyproject.toml
PITS_app/: conversation_engine.py  document_uploader.py  global_settings.py  index_builder.py  logging_functions.py  quiz_builder.py  session_functions.py
ch2/: sample1.py
ch3/: interactive_augmented_llm_app.py  script.py
ch4/: script.py
ch4/files/: code.txt  sentences.txt  tokens.txt
ch5/: script.py
ch6/: script.py
ch8/: chat_memory.json  emails.txt  script.py
